--- a/DevKit/Views/TcpClientView.xaml
+++ b/DevKit/Views/TcpClientView.xaml
@@ -139,6 +139,7 @@
             </DockPanel>
 
             <DataGrid
+                x:Name="ExCommandDataGrid"
                 Grid.Row="5"
                 Margin="0,10,10,0"
                 Padding="0"
@@ -199,6 +200,16 @@
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
                 </DataGrid.Columns>
+
+                <!--  右键菜单  -->
+                <DataGrid.ContextMenu>
+                    <ContextMenu Width="120">
+                        <MenuItem Command="{Binding SendCommand}" Header="发送" />
+                        <MenuItem Command="{Binding CopyCommand}" Header="复制" />
+                        <MenuItem Command="{Binding EditCommand}" Header="编辑" />
+                        <MenuItem Command="{Binding DeleteCommand}" Header="删除" />
+                    </ContextMenu>
+                </DataGrid.ContextMenu>
             </DataGrid>
         </Grid>
 
