--- a/DevKit/Dialogs/CreateKeyDialog.xaml
+++ b/DevKit/Dialogs/CreateKeyDialog.xaml
@@ -3,11 +3,12 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:ut="clr-namespace:DevKit.Utils"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
-    Width="400"
+    Width="410"
     Height="335"
     d:DataContext="{d:DesignInstance Type=vm:CreateKeyDialogViewModel}"
     Background="White"
@@ -48,12 +49,13 @@
                     VerticalAlignment="Center"
                     Text="Key别名" />
 
-                <!--  hc:InfoElement.Placeholder="请输入密码证书别名"  -->
-                <!--  hc:InfoElement.ShowClearButton="True"  -->
-                <TextBox
+                <hc:TextBox
                     Margin="10"
                     VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
+                    hc:InfoElement.Placeholder="请输入密码证书别名"
+                    hc:InfoElement.ShowClearButton="True"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     FontSize="14"
                     Text="{Binding KeyAlias}" />
             </DockPanel>
@@ -65,7 +67,6 @@
                     VerticalAlignment="Center"
                     Text="密码" />
 
-                <!--  hc:InfoElement.Placeholder="请输入密码"  -->
                 <PasswordBox
                     Margin="0,0,10,0"
                     VerticalAlignment="Center"
@@ -82,12 +83,13 @@
                     VerticalAlignment="Center"
                     Text="创建证书者姓氏" />
 
-                <!--  hc:InfoElement.Placeholder="姓氏拼音，如：Zhao"  -->
-                <!--  hc:InfoElement.ShowClearButton="True"  -->
-                <TextBox
+                <hc:TextBox
                     Margin="10"
                     VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
+                    hc:InfoElement.Placeholder="姓氏拼音，如：Zhao"
+                    hc:InfoElement.ShowClearButton="True"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     FontSize="14"
                     Text="{Binding KeySurname}" />
             </DockPanel>
@@ -99,12 +101,13 @@
                     VerticalAlignment="Center"
                     Text="公司名" />
 
-                <!--  hc:InfoElement.Placeholder="请输入证书所属公司名"  -->
-                <!--  hc:InfoElement.ShowClearButton="True"  -->
-                <TextBox
+                <hc:TextBox
                     Margin="0,0,10,0"
                     VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
+                    hc:InfoElement.Placeholder="请输入证书所属公司名"
+                    hc:InfoElement.ShowClearButton="True"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     FontSize="14"
                     Text="{Binding KeyCompany}" />
             </DockPanel>
@@ -116,12 +119,13 @@
                     VerticalAlignment="Center"
                     Text="行政区" />
 
-                <!--  hc:InfoElement.Placeholder="请输入所属公司行政区域，如：海淀区"  -->
-                <!--  hc:InfoElement.ShowClearButton="True"  -->
-                <TextBox
+                <hc:TextBox
                     Margin="10"
                     VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
+                    hc:InfoElement.Placeholder="请输入所属公司行政区域，如：海淀区"
+                    hc:InfoElement.ShowClearButton="True"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     FontSize="14"
                     Text="{Binding KeyDistrict}" />
             </DockPanel>
@@ -133,12 +137,13 @@
                     VerticalAlignment="Center"
                     Text="省（市）" />
 
-                <!--  hc:InfoElement.Placeholder="请输入所属公司省份，如：北京市"  -->
-                <!--  hc:InfoElement.ShowClearButton="True"  -->
-                <TextBox
+                <hc:TextBox
                     Margin="0,0,10,0"
                     VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
+                    hc:InfoElement.Placeholder="请输入所属公司省份，如：北京市"
+                    hc:InfoElement.ShowClearButton="True"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     FontSize="14"
                     Text="{Binding KeyProvince}" />
             </DockPanel>
@@ -159,7 +164,7 @@
 
             <UniformGrid
                 Grid.Row="7"
-                Width="250"
+                Width="260"
                 Margin="10"
                 HorizontalAlignment="Right"
                 Columns="2"
@@ -167,12 +172,14 @@
                 <Button
                     Margin="0,0,5,0"
                     HorizontalAlignment="Stretch"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding SaveKeyCommand}"
                     Content="选择路径" />
 
                 <Button
                     Margin="5,0,0,0"
                     HorizontalAlignment="Stretch"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding GenerateKeyCommand}"
                     Content="生成证书" />
             </UniformGrid>
