--- a/DevKit/Dialogs/ExCommandDialog.xaml
+++ b/DevKit/Dialogs/ExCommandDialog.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
@@ -46,13 +47,12 @@
                     VerticalAlignment="Center"
                     Text="指令值" />
 
-                <!--  hc:InfoElement.Placeholder="请输入16进制格式指令"  -->
-                <TextBox
+                <hc:TextBox
                     Grid.Column="1"
                     Margin="10,0,0,0"
                     Padding="7,5"
                     VerticalContentAlignment="Top"
-                    FontSize="14"
+                    hc:InfoElement.Placeholder="请输入16进制格式指令"
                     Text="{Binding UserCommandValue}"
                     TextWrapping="NoWrap" />
             </Grid>
@@ -69,12 +69,11 @@
                     VerticalAlignment="Center"
                     Text="备注" />
 
-                <!--  hc:InfoElement.Placeholder="可选"  -->
-                <TextBox
+                <hc:TextBox
                     Grid.Column="1"
                     Margin="10,0,0,0"
                     Padding="7,5"
-                    FontSize="14"
+                    hc:InfoElement.Placeholder="可选"
                     Text="{Binding CommandAnnotation}"
                     TextWrapping="NoWrap" />
             </Grid>
