--- a/DevKit/Views/TcpClientView.xaml
+++ b/DevKit/Views/TcpClientView.xaml
@@ -53,9 +53,9 @@
                 <hc:TextBox
                     Margin="10,0"
                     VerticalAlignment="Center"
+                    hc:InfoElement.Placeholder="格式：192.168.0.0"
                     hc:InfoElement.ShowClearButton="True"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
-                    FontSize="14"
                     Text="{Binding RemoteAddress}"
                     TextWrapping="NoWrap" />
             </DockPanel>
@@ -72,9 +72,9 @@
                 <hc:TextBox
                     Margin="10,0"
                     VerticalAlignment="Center"
+                    hc:InfoElement.Placeholder="格式：8888"
                     hc:InfoElement.ShowClearButton="True"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
-                    FontSize="14"
                     MaxLength="5"
                     Text="{Binding RemotePort}"
                     TextWrapping="NoWrap" />
@@ -114,13 +114,14 @@
                     Margin="0,0,5,0"
                     HorizontalAlignment="Stretch"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
+                    Command="{Binding SaveCommunicationCommand}"
                     Content="保存数据" />
 
                 <Button
                     Margin="5,0,0,0"
                     HorizontalAlignment="Stretch"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
-                    Command="{Binding ClearMessageCommand}"
+                    Command="{Binding ClearCommunicationCommand}"
                     Content="清空消息" />
             </UniformGrid>
 
