feat(DevKit): 添加扩展指令编辑功能
- 在 ExCommandDialog.xaml 中添加了文本换行功能
- 在 ExCommandDialogViewModel.cs 中增加了编辑指令的逻辑
- 在 TcpClientView.xaml 中添加了编辑指令的按钮
- 在 TcpClientViewModel.cs 中实现了编辑指令的方法

--- a/DevKit/Dialogs/ExCommandDialog.xaml
+++ b/DevKit/Dialogs/ExCommandDialog.xaml
@@ -54,7 +54,7 @@
                     VerticalContentAlignment="Top"
                     hc:InfoElement.Placeholder="请输入16进制格式指令"
                     Text="{Binding UserCommandValue}"
-                    TextWrapping="NoWrap" />
+                    TextWrapping="Wrap" />
             </Grid>
 
             <Grid Grid.Row="1" Margin="10,20">
