feat(TcpClient): 优化 TCP 客户端功能和界面- 移除 TcpClientView 的导航注册，改为对话框注册- 更新 CreateKeyDialog、ExCommandDialog 和 ScreenShotListDialog 的按钮样式 - 在 TcpClientView 中添加选中事件交互 -完善 TcpClientViewModel 中的命令项选中逻辑 - 优化 TcpClientViewModel 的初始化和连接状态事件处理

--- a/DevKit/Dialogs/ScreenShotListDialog.xaml
+++ b/DevKit/Dialogs/ScreenShotListDialog.xaml
@@ -73,14 +73,16 @@
                     Grid.Column="0"
                     HorizontalAlignment="Left"
                     Command="{Binding SortScreenshotsCommand}"
-                    Content="排序" />
+                    Content="排序"
+                    Style="{StaticResource ButtonInfo}" />
 
                 <Button
                     Grid.Column="1"
                     HorizontalAlignment="Right"
                     Command="{Binding OutputScreenshotCommand}"
                     CommandParameter="{Binding ElementName=ScreenshotsListBox, Path=SelectedItem}"
-                    Content="导出到电脑" />
+                    Content="导出到电脑"
+                    Style="{StaticResource ButtonPrimary}" />
             </Grid>
         </Grid>
     </Border>
