--- a/DevKit/Dialogs/CreateKeyDialog.xaml
+++ b/DevKit/Dialogs/CreateKeyDialog.xaml
@@ -172,16 +172,16 @@
                 <Button
                     Margin="0,0,5,0"
                     HorizontalAlignment="Stretch"
-                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding SaveKeyCommand}"
-                    Content="选择路径" />
+                    Content="选择路径"
+                    Style="{StaticResource ButtonInfo}" />
 
                 <Button
                     Margin="5,0,0,0"
                     HorizontalAlignment="Stretch"
-                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding GenerateKeyCommand}"
-                    Content="生成证书" />
+                    Content="生成证书"
+                    Style="{StaticResource ButtonPrimary}" />
             </UniformGrid>
         </Grid>
     </Border>
