--- a/DevKit/Views/TcpClientView.xaml
+++ b/DevKit/Views/TcpClientView.xaml
@@ -213,10 +213,7 @@
                 <!--  右键菜单  -->
                 <DataGrid.ContextMenu>
                     <ContextMenu Width="120" PlacementTarget="{Binding ElementName=ExCommandDataGrid}">
-                        <MenuItem
-                            Command="{Binding SendCommand}"
-                            CommandParameter="{Binding Path=PlacementTarget.(DataGrid.SelectedItem).(cache:ExCommandCache.CommandValue), RelativeSource={RelativeSource AncestorType=ContextMenu}}"
-                            Header="发送" />
+                        <MenuItem Command="{Binding SendCommand}" Header="发送" />
                         <MenuItem
                             Command="{Binding CopyCommand}"
                             CommandParameter="{Binding Path=PlacementTarget.(DataGrid.SelectedItem).(cache:ExCommandCache.CommandValue), RelativeSource={RelativeSource AncestorType=ContextMenu}}"
@@ -404,17 +401,7 @@
                     Margin="10,0,0,0"
                     HorizontalAlignment="Right"
                     Content="16进制"
-                    IsChecked="{Binding SendHex}">
-                    <b:Interaction.Triggers>
-                        <b:EventTrigger EventName="Checked">
-                            <b:InvokeCommandAction Command="{Binding SendHexCheckedCommand}" />
-                        </b:EventTrigger>
-
-                        <b:EventTrigger EventName="Unchecked">
-                            <b:InvokeCommandAction Command="{Binding SendHexUncheckedCommand}" />
-                        </b:EventTrigger>
-                    </b:Interaction.Triggers>
-                </CheckBox>
+                    IsChecked="{Binding IsHexSelected}" />
             </Grid>
         </Grid>
     </DockPanel>
