--- a/DevKit/Views/TcpClientView.xaml
+++ b/DevKit/Views/TcpClientView.xaml
@@ -338,7 +338,6 @@
                     Width="65"
                     Height="60"
                     Margin="10,0,0,0"
-                    BorderThickness="0"
                     Command="{Binding SendCommand}"
                     Content="发送"
                     Style="{StaticResource ButtonPrimary}" />
@@ -358,18 +357,21 @@
                     Grid.Column="0"
                     HorizontalAlignment="Left"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
-                    Content="脚本"
-                    FontSize="14" />
+                    Command="{Binding OpenScriptCommand}"
+                    Content="脚本" />
 
                 <CheckBox
                     x:Name="LoopCheckBox"
                     Grid.Column="1"
                     Margin="10,0"
-                    Content="循环发送"
-                    IsChecked="{Binding LoopSend}">
+                    Content="循环发送">
                     <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="Checked">
+                            <b:InvokeCommandAction Command="{Binding TimeCheckedCommand}" />
+                        </b:EventTrigger>
+
                         <b:EventTrigger EventName="Unchecked">
-                            <b:InvokeCommandAction Command="{Binding LoopUncheckedCommand}" />
+                            <b:InvokeCommandAction Command="{Binding TimeUncheckedCommand}" />
                         </b:EventTrigger>
                     </b:Interaction.Triggers>
                 </CheckBox>
