feat(TcpClient): 增加日志内容编码转换功能- 在 TcpClientView.xaml 中添加编码选择组合框 - 在 TcpClientViewModel.cs 中实现编码转换逻辑 - 修改 LogModel.cs，为日志内容添加属性变更通知

--- a/DevKit/Views/TcpClientView.xaml
+++ b/DevKit/Views/TcpClientView.xaml
@@ -207,7 +207,7 @@
                 <!--  选中事件  -->
                 <b:Interaction.Triggers>
                     <b:EventTrigger EventName="SelectionChanged">
-                        <b:InvokeCommandAction Command="{Binding ItemSelectionChangedCommand}" CommandParameter="{Binding SelectedItem.CommandValue, ElementName=ExCommandDataGrid}" />
+                        <b:InvokeCommandAction Command="{Binding DataGridItemSelectedCommand}" CommandParameter="{Binding SelectedItem.CommandValue, ElementName=ExCommandDataGrid}" />
                     </b:EventTrigger>
                 </b:Interaction.Triggers>
 
@@ -391,12 +391,20 @@
                     Text="ms/次" />
 
                 <ComboBox
+                    x:Name="EncodeComboBox"
                     Grid.Column="4"
                     Width="80"
                     Margin="10,0"
                     SelectedIndex="0">
                     <ComboBoxItem Content="16进制" />
                     <ComboBoxItem Content="ASCII" />
+                    
+                    <!--  选中事件  -->
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="SelectionChanged">
+                            <b:InvokeCommandAction Command="{Binding ComboBoxItemSelectedCommand}" CommandParameter="{Binding SelectedIndex, ElementName=EncodeComboBox}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
                 </ComboBox>
 
                 <CheckBox
