--- a/DevKit/Dialogs/CreateKeyDialog.xaml
+++ b/DevKit/Dialogs/CreateKeyDialog.xaml
@@ -11,7 +11,7 @@
     Width="410"
     Height="335"
     d:DataContext="{d:DesignInstance Type=vm:CreateKeyDialogViewModel}"
-    Background="White"
+    Background="{DynamicResource DevKitBackgroundBrush}"
     mc:Ignorable="d">
 
     <prism:Dialog.WindowStyle>
@@ -29,160 +29,159 @@
         </Style>
     </UserControl.Resources>
 
-    <Border BorderThickness="0,1,0,0">
-        <Grid Margin="10">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-            <DockPanel Grid.Row="0" LastChildFill="True">
-                <TextBlock
-                    Width="100"
-                    Margin="10,0,0,0"
-                    VerticalAlignment="Center"
-                    Text="Key别名" />
+        <DockPanel Grid.Row="0" LastChildFill="True">
+            <TextBlock
+                Width="100"
+                Margin="10,0,0,0"
+                VerticalAlignment="Center"
+                Text="Key别名" />
 
-                <hc:TextBox
-                    Margin="10"
-                    VerticalAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    hc:InfoElement.Placeholder="请输入密码证书别名"
-                    hc:InfoElement.ShowClearButton="True"
-                    BorderBrush="{DynamicResource DevKitBorderBrush}"
-                    FontSize="14"
-                    Text="{Binding KeyAlias}" />
-            </DockPanel>
-
-            <DockPanel Grid.Row="1" LastChildFill="True">
-                <TextBlock
-                    Width="100"
-                    Margin="10,0"
-                    VerticalAlignment="Center"
-                    Text="密码" />
-
-                <PasswordBox
-                    Margin="0,0,10,0"
-                    VerticalAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    ut:PasswordAttachAttribute.Attach="True"
-                    ut:PasswordAttachAttribute.Password="{Binding KeyPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    FontSize="14" />
-            </DockPanel>
-
-            <DockPanel Grid.Row="2" LastChildFill="True">
-                <TextBlock
-                    Width="100"
-                    Margin="10,0,0,0"
-                    VerticalAlignment="Center"
-                    Text="创建证书者姓氏" />
-
-                <hc:TextBox
-                    Margin="10"
-                    VerticalAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    hc:InfoElement.Placeholder="姓氏拼音，如：Zhao"
-                    hc:InfoElement.ShowClearButton="True"
-                    BorderBrush="{DynamicResource DevKitBorderBrush}"
-                    FontSize="14"
-                    Text="{Binding KeySurname}" />
-            </DockPanel>
-
-            <DockPanel Grid.Row="3" LastChildFill="True">
-                <TextBlock
-                    Width="100"
-                    Margin="10,0"
-                    VerticalAlignment="Center"
-                    Text="公司名" />
-
-                <hc:TextBox
-                    Margin="0,0,10,0"
-                    VerticalAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    hc:InfoElement.Placeholder="请输入证书所属公司名"
-                    hc:InfoElement.ShowClearButton="True"
-                    BorderBrush="{DynamicResource DevKitBorderBrush}"
-                    FontSize="14"
-                    Text="{Binding KeyCompany}" />
-            </DockPanel>
-
-            <DockPanel Grid.Row="4" LastChildFill="True">
-                <TextBlock
-                    Width="100"
-                    Margin="10,0,0,0"
-                    VerticalAlignment="Center"
-                    Text="行政区" />
-
-                <hc:TextBox
-                    Margin="10"
-                    VerticalAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    hc:InfoElement.Placeholder="请输入所属公司行政区域，如：海淀区"
-                    hc:InfoElement.ShowClearButton="True"
-                    BorderBrush="{DynamicResource DevKitBorderBrush}"
-                    FontSize="14"
-                    Text="{Binding KeyDistrict}" />
-            </DockPanel>
-
-            <DockPanel Grid.Row="5" LastChildFill="True">
-                <TextBlock
-                    Width="100"
-                    Margin="10,0"
-                    VerticalAlignment="Center"
-                    Text="省（市）" />
-
-                <hc:TextBox
-                    Margin="0,0,10,0"
-                    VerticalAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    hc:InfoElement.Placeholder="请输入所属公司省份，如：北京市"
-                    hc:InfoElement.ShowClearButton="True"
-                    BorderBrush="{DynamicResource DevKitBorderBrush}"
-                    FontSize="14"
-                    Text="{Binding KeyProvince}" />
-            </DockPanel>
-
-            <DockPanel Grid.Row="6" LastChildFill="True">
-                <TextBlock
-                    Width="100"
-                    Margin="10,0,0,0"
-                    VerticalAlignment="Center"
-                    Text="存储位置" />
-
-                <TextBlock
-                    Margin="10"
-                    VerticalAlignment="Center"
-                    Text="{Binding KeySavePath}"
-                    ToolTip="{Binding KeySavePath}" />
-            </DockPanel>
-
-            <UniformGrid
-                Grid.Row="7"
-                Width="260"
+            <hc:TextBox
                 Margin="10"
-                HorizontalAlignment="Right"
-                Columns="2"
-                Rows="1">
-                <Button
-                    Margin="0,0,5,0"
-                    HorizontalAlignment="Stretch"
-                    Command="{Binding SaveKeyCommand}"
-                    Content="选择路径"
-                    Style="{StaticResource ButtonInfo}" />
+                VerticalAlignment="Center"
+                VerticalContentAlignment="Center"
+                hc:InfoElement.Placeholder="请输入密码证书别名"
+                hc:InfoElement.ShowClearButton="True"
+                BorderBrush="{DynamicResource DevKitBorderBrush}"
+                FontSize="14"
+                Text="{Binding KeyAlias}" />
+        </DockPanel>
 
-                <Button
-                    Margin="5,0,0,0"
-                    HorizontalAlignment="Stretch"
-                    Command="{Binding GenerateKeyCommand}"
-                    Content="生成证书"
-                    Style="{StaticResource ButtonPrimary}" />
-            </UniformGrid>
-        </Grid>
-    </Border>
+        <DockPanel Grid.Row="1" LastChildFill="True">
+            <TextBlock
+                Width="100"
+                Margin="10,0"
+                VerticalAlignment="Center"
+                Text="密码" />
+
+            <PasswordBox
+                Margin="0,0,10,0"
+                VerticalAlignment="Center"
+                VerticalContentAlignment="Center"
+                ut:PasswordAttachAttribute.Attach="True"
+                ut:PasswordAttachAttribute.Password="{Binding KeyPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                BorderBrush="{DynamicResource DevKitBorderBrush}"
+                FontSize="14" />
+        </DockPanel>
+
+        <DockPanel Grid.Row="2" LastChildFill="True">
+            <TextBlock
+                Width="100"
+                Margin="10,0,0,0"
+                VerticalAlignment="Center"
+                Text="创建证书者姓氏" />
+
+            <hc:TextBox
+                Margin="10"
+                VerticalAlignment="Center"
+                VerticalContentAlignment="Center"
+                hc:InfoElement.Placeholder="姓氏拼音，如：Zhao"
+                hc:InfoElement.ShowClearButton="True"
+                BorderBrush="{DynamicResource DevKitBorderBrush}"
+                FontSize="14"
+                Text="{Binding KeySurname}" />
+        </DockPanel>
+
+        <DockPanel Grid.Row="3" LastChildFill="True">
+            <TextBlock
+                Width="100"
+                Margin="10,0"
+                VerticalAlignment="Center"
+                Text="公司名" />
+
+            <hc:TextBox
+                Margin="0,0,10,0"
+                VerticalAlignment="Center"
+                VerticalContentAlignment="Center"
+                hc:InfoElement.Placeholder="请输入证书所属公司名"
+                hc:InfoElement.ShowClearButton="True"
+                BorderBrush="{DynamicResource DevKitBorderBrush}"
+                FontSize="14"
+                Text="{Binding KeyCompany}" />
+        </DockPanel>
+
+        <DockPanel Grid.Row="4" LastChildFill="True">
+            <TextBlock
+                Width="100"
+                Margin="10,0,0,0"
+                VerticalAlignment="Center"
+                Text="行政区" />
+
+            <hc:TextBox
+                Margin="10"
+                VerticalAlignment="Center"
+                VerticalContentAlignment="Center"
+                hc:InfoElement.Placeholder="请输入所属公司行政区域，如：海淀区"
+                hc:InfoElement.ShowClearButton="True"
+                BorderBrush="{DynamicResource DevKitBorderBrush}"
+                FontSize="14"
+                Text="{Binding KeyDistrict}" />
+        </DockPanel>
+
+        <DockPanel Grid.Row="5" LastChildFill="True">
+            <TextBlock
+                Width="100"
+                Margin="10,0"
+                VerticalAlignment="Center"
+                Text="省（市）" />
+
+            <hc:TextBox
+                Margin="0,0,10,0"
+                VerticalAlignment="Center"
+                VerticalContentAlignment="Center"
+                hc:InfoElement.Placeholder="请输入所属公司省份，如：北京市"
+                hc:InfoElement.ShowClearButton="True"
+                BorderBrush="{DynamicResource DevKitBorderBrush}"
+                FontSize="14"
+                Text="{Binding KeyProvince}" />
+        </DockPanel>
+
+        <DockPanel Grid.Row="6" LastChildFill="True">
+            <TextBlock
+                Width="100"
+                Margin="10,0,0,0"
+                VerticalAlignment="Center"
+                Text="存储位置" />
+
+            <TextBlock
+                Margin="10"
+                VerticalAlignment="Center"
+                Text="{Binding KeySavePath}"
+                ToolTip="{Binding KeySavePath}" />
+        </DockPanel>
+
+        <UniformGrid
+            Grid.Row="7"
+            Width="260"
+            Margin="10"
+            HorizontalAlignment="Right"
+            Columns="2"
+            Rows="1">
+            <Button
+                Margin="0,0,5,0"
+                HorizontalAlignment="Stretch"
+                Command="{Binding SaveKeyCommand}"
+                Content="选择路径"
+                Style="{StaticResource ButtonInfo}" />
+
+            <Button
+                Margin="5,0,0,0"
+                HorizontalAlignment="Stretch"
+                Command="{Binding GenerateKeyCommand}"
+                Content="生成证书"
+                Style="{StaticResource ButtonPrimary}" />
+        </UniformGrid>
+    </Grid>
 </UserControl>
