--- a/DevKit/Dialogs/CommandScriptDialog.xaml
+++ b/DevKit/Dialogs/CommandScriptDialog.xaml
@@ -60,8 +60,13 @@
             Grid.Row="2"
             Height="40"
             Padding="0"
+            AllowDrop="True"
             BorderBrush="{DynamicResource DevKitBorderBrush}"
+            DragOver="SelectedCommandListBox_DragOver"
+            Drop="SelectedCommandListBox_Drop"
             ItemsSource="{Binding SelectedCommands}"
+            PreviewMouseLeftButtonDown="SelectedCommandListBox_PreviewMouseLeftButtonDown"
+            PreviewMouseMove="SelectedCommandListBox_PreviewMouseMove"
             ScrollViewer.CanContentScroll="False"
             ScrollViewer.HorizontalScrollBarVisibility="Auto"
             ScrollViewer.VerticalScrollBarVisibility="Hidden">
